// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Apps/Punch Card App 1`] = `
<div>
  <div
    className="ms-Stack css-126"
  >
    <div
      className="ms-StackItem css-64"
    >
      <form
        onSubmit={[Function]}
      >
        <div
          className="ms-Stack css-126"
        >
          <div
            className="ms-TextField root-67"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-68"
              >
                <input
                  aria-invalid={false}
                  className="ms-TextField-field field-69"
                  id="TextField22"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder="Punch Card Title..."
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <button
            aria-disabled={true}
            className="ms-Button ms-Button--icon is-disabled ms-hiddenMdUp root-127"
            data-is-focusable={false}
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            title="Add Punch Card"
            type="submit"
          >
            <span
              className="ms-Button-flexContainer flexContainer-114"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-87 ms-Button-icon icon-128"
                data-icon-name="Add"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
          <button
            aria-disabled={true}
            className="ms-Button ms-Button--primary is-disabled ms-hiddenSm root-130"
            data-is-focusable={false}
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            title="Add Punch Card"
            type="submit"
          >
            <span
              className="ms-Button-flexContainer flexContainer-114"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-87 ms-Button-icon icon-128"
                data-icon-name="Add"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons\\"",
                  }
                }
              >
                
              </i>
              <span
                className="ms-Button-textContainer textContainer-115"
              >
                <span
                  className="ms-Button-label label-117"
                  id="id__28"
                >
                  Add Punch Card
                </span>
              </span>
            </span>
          </button>
        </div>
      </form>
    </div>
    <div
      className="ms-StackItem css-64"
    >
      <button
        aria-disabled={true}
        className="ms-Button ms-Button--icon is-disabled ms-hiddenMdUp root-127"
        data-is-focusable={false}
        disabled={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-114"
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-hidden={true}
            className="ms-Icon root-37 css-131 ms-Button-icon icon-128"
            data-icon-name="OpenPane"
            role="presentation"
            style={
              Object {
                "fontFamily": "\\"FabricMDL2Icons-1\\"",
              }
            }
          >
            
          </i>
          <span
            className="ms-Button-textContainer textContainer-115"
          />
        </span>
      </button>
      <button
        aria-disabled={true}
        className="ms-Button ms-Button--default is-disabled ms-hiddenSm root-132"
        data-is-focusable={false}
        disabled={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-114"
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-hidden={true}
            className="ms-Icon root-37 css-131 ms-Button-icon icon-128"
            data-icon-name="OpenPane"
            role="presentation"
            style={
              Object {
                "fontFamily": "\\"FabricMDL2Icons-1\\"",
              }
            }
          >
            
          </i>
          <span
            className="ms-Button-textContainer textContainer-115"
          >
            <span
              className="ms-Button-label label-117"
              id="id__34"
            >
              Show Punch Cards
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Apps/Punch Card Design 1`] = `
<div
  className="ms-Grid"
>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm12 ms-md8 ms-lg8 ms-xl6"
    >
      <span
        className="css-62"
      >
        <h2>
          My Punch Card
        </h2>
      </span>
    </div>
  </div>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm12 ms-md6"
    >
      <span
        className="css-62"
      >
        <h3>
          Goal For The Day
        </h3>
      </span>
      <div
        className="ms-Stack css-63"
      >
        <div
          className="ms-StackItem css-64"
        >
          <div
            className="ms-Stack css-65"
          >
            <div
              className="ms-TextField root-67"
            >
              <div
                className="ms-TextField-wrapper"
              >
                <div
                  className="ms-TextField-fieldGroup fieldGroup-68"
                >
                  <input
                    aria-invalid={false}
                    className="ms-TextField-field field-69"
                    id="TextField8"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              className="ms-TextField root-67"
            >
              <div
                className="ms-TextField-wrapper"
              >
                <div
                  className="ms-TextField-fieldGroup fieldGroup-68"
                >
                  <input
                    aria-invalid={false}
                    className="ms-TextField-field field-69"
                    id="TextField11"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="ms-StackItem css-64"
        >
          <div
            className="ms-MessageBar ms-MessageBar-multiline root-78"
          >
            <div
              className="ms-MessageBar-content content-79"
            >
              <div
                aria-hidden={true}
                className="ms-MessageBar-icon iconContainer-80"
              >
                <i
                  aria-hidden={true}
                  className="icon-88"
                  data-icon-name="Info"
                >
                  
                </i>
              </div>
              <div
                aria-live="polite"
                className="ms-MessageBar-text text-82"
                id="MessageBar14"
                role="status"
              >
                <span
                  className="ms-MessageBar-innerText innerText-83"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm-12 ms-md6"
    >
      <div
        className="ms-Stack css-89"
      >
        <div
          className="ms-StackItem css-90"
        >
          <span
            className="css-62"
          >
            <h3>
              Punched
            </h3>
          </span>
          <div
            className="ms-Viewport"
            style={
              Object {
                "minHeight": 1,
                "minWidth": 1,
              }
            }
          >
            <div
              className="ms-DetailsList is-horizontalConstrained root-91"
              data-automationid="DetailsList"
              data-is-scrollable="false"
            >
              <div
                aria-colcount={1}
                aria-readonly="true"
                aria-rowcount={1}
                role="grid"
              >
                <div
                  className="ms-DetailsList-headerWrapper"
                  onKeyDown={[Function]}
                  role="presentation"
                >
                  <div
                    className="ms-FocusZone css-51 ms-DetailsHeader root-93"
                    data-automationid="DetailsHeader"
                    data-focuszone-id="FocusZone16"
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseDownCapture={[Function]}
                    onMouseMove={[Function]}
                    role="row"
                  >
                    <div
                      aria-colindex={1}
                      aria-labelledby="header15-check"
                      className="ms-DetailsHeader-cell ms-DetailsHeader-cellIsCheck cellIsCheck-96"
                      onClick={[Function]}
                      role="columnheader"
                    >
                      <span
                        className="ms-DetailsHeader-checkTooltip"
                      >
                        <div
                          aria-checked={false}
                          className="ms-DetailsRow-check ms-DetailsHeader-check check-94 ms-DetailsRow-check--isHeader ms-Check-checkHost check-109"
                          data-automationid="DetailsRowCheck"
                          data-is-focusable={true}
                          data-selection-toggle={true}
                          id="header15-check"
                          role="checkbox"
                        >
                          <div
                            className="ms-Check root-110"
                          >
                            <i
                              aria-hidden={true}
                              className="ms-Icon root-37 css-87 ms-Check-circle circle-111"
                              data-icon-name="CircleRing"
                              role="presentation"
                              style={
                                Object {
                                  "fontFamily": "\\"FabricMDL2Icons\\"",
                                }
                              }
                            >
                              
                            </i>
                            <i
                              aria-hidden={true}
                              className="ms-Icon root-37 css-87 ms-Check-check check-112"
                              data-icon-name="StatusCircleCheckmark"
                              role="presentation"
                              style={
                                Object {
                                  "fontFamily": "\\"FabricMDL2Icons\\"",
                                }
                              }
                            >
                              
                            </i>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ms-DetailsList-contentWrapper"
                  onKeyDown={[Function]}
                  role="presentation"
                >
                  <div
                    className="ms-SelectionZone"
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onDoubleClick={[Function]}
                    onFocusCapture={[Function]}
                    onKeyDown={[Function]}
                    onKeyDownCapture={[Function]}
                    onMouseDown={[Function]}
                    onMouseDownCapture={[Function]}
                    role="presentation"
                  >
                    <div
                      className="ms-FocusZone css-51 focusZone-92"
                      data-focuszone-id="FocusZone17"
                      onBlur={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onMouseDownCapture={[Function]}
                    >
                      <div
                        className="ms-List"
                      >
                        <div
                          className="ms-List-surface"
                          role="presentation"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <br />
        </div>
        <div
          className="ms-StackItem css-64"
        >
          <button
            className="ms-Button ms-Button--primary root-113"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-114"
              data-automationid="splitbuttonprimary"
            />
          </button>
        </div>
      </div>
      <div
        dir="ltr"
      >
        <div
          className="ms-TooltipHost root-119"
          onBlurCapture={[Function]}
          onFocusCapture={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="ms-ProgressIndicator root-120"
          >
            <div
              className="ms-ProgressIndicator-itemName itemName-121"
            >
              Punched
            </div>
            <div
              className="ms-ProgressIndicator-itemProgress itemProgress-123"
            >
              <div
                className="ms-ProgressIndicator-progressTrack progressTrack-124"
              />
              <div
                aria-valuemax={100}
                aria-valuemin={0}
                aria-valuenow={20}
                className="ms-ProgressIndicator-progressBar progressBar-125"
                role="progressbar"
                style={
                  Object {
                    "transition": undefined,
                    "width": "20%",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Apps/Time Tool App 1`] = `
<div>
  <div
    className="ms-Grid"
    dir="ltr"
  >
    <div
      className="ms-Grid-col ms-lg2 ms-xl4"
    />
    <div
      className=" ms-Grid-col ms-sm12 ms-lg8 ms-xl4 ms-depth-16 ms-bgColor-gray10 "
    >
      <div
        className="ms-Stack css-133"
      >
        <span
          className="css-134"
        >
          Time Tool
        </span>
        <span
          className="css-62"
        >
          1. Convert date & time for any timezone into a timestamp.
        </span>
        <div
          className="ms-Stack css-89"
        >
          <div
            className="ms-Stack css-126"
          >
            <div
              className="ms-StackItem css-64"
            >
              <div
                className="ms-DatePicker root-135"
              >
                <div
                  aria-haspopup="true"
                >
                  <div
                    className="ms-TextField textField-139"
                  >
                    <div
                      className="ms-TextField-wrapper"
                    >
                      <label
                        className="ms-Label root-142"
                        htmlFor="DatePicker38-label"
                        id="TextFieldLabel42"
                      >
                        Date
                      </label>
                      <div
                        className="ms-TextField-fieldGroup fieldGroup-68"
                      >
                        <input
                          aria-expanded={false}
                          aria-invalid={false}
                          aria-labelledby="TextFieldLabel42"
                          className="ms-TextField-field field-140"
                          id="DatePicker38-label"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onInput={[Function]}
                          onKeyDown={[Function]}
                          readOnly={true}
                          required={false}
                          role="combobox"
                          type="text"
                          value="Fri Nov 27 2020"
                        />
                        <i
                          aria-hidden={true}
                          className="ms-DatePicker-event--with-label msDatePickerDisabled icon-143"
                          data-icon-name="Calendar"
                          onClick={[Function]}
                        >
                          
                        </i>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-StackItem css-64"
            >
              <div
                className="ms-TextField root-67"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <label
                    className="ms-Label root-142"
                    htmlFor="TextField43"
                    id="TextFieldLabel45"
                  >
                    Time
                  </label>
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-68"
                  >
                    <input
                      aria-invalid={false}
                      aria-labelledby="TextFieldLabel45"
                      className="ms-TextField-field field-140"
                      id="TextField43"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      onMouseUp={[Function]}
                      onPaste={[Function]}
                      type="text"
                      value="08:26"
                    />
                    <i
                      aria-hidden={true}
                      className="icon-145"
                      data-icon-name="Clock"
                    >
                      
                    </i>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ms-Stack css-89"
          >
            <div
              className="ms-StackItem css-64"
            >
              <div
                className="ms-Dropdown-container"
              >
                <label
                  className="ms-Label ms-Dropdown-label root-162"
                  id="Dropdown46-label"
                >
                  Timezone
                </label>
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="Dropdown46-label Dropdown46-option"
                  className="ms-Dropdown dropdown-146"
                  data-is-focusable={true}
                  id="Dropdown46"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  role="listbox"
                  tabIndex={0}
                >
                  <span
                    aria-atomic={true}
                    aria-invalid={false}
                    aria-live="polite"
                    aria-posinset={252}
                    aria-selected={true}
                    aria-setsize={594}
                    className="ms-Dropdown-title title-175"
                    id="Dropdown46-option"
                    role="option"
                  >
                    Asia/Calcutta
                  </span>
                  <span
                    className="ms-Dropdown-caretDownWrapper caretDownWrapper-148"
                  >
                    <i
                      aria-hidden={true}
                      className="ms-Dropdown-caretDown caretDown-163"
                      data-icon-name="ChevronDown"
                    >
                      
                    </i>
                  </span>
                </div>
              </div>
            </div>
            <div
              className="ms-StackItem css-64"
            >
              <div
                className="ms-Checkbox is-enabled root-164"
              >
                <input
                  aria-checked="false"
                  aria-label="Is end of time?"
                  checked={false}
                  className="input-165"
                  id="checkbox-47"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="checkbox"
                />
                <label
                  className="ms-Checkbox-label label-166"
                  htmlFor="checkbox-47"
                >
                  <div
                    className="ms-Checkbox-checkbox checkbox-167"
                  >
                    <i
                      aria-hidden={true}
                      className="ms-Checkbox-checkmark checkmark-170"
                      data-icon-name="CheckMark"
                    >
                      
                    </i>
                  </div>
                  <span
                    aria-hidden="true"
                    className="ms-Checkbox-text text-169"
                  >
                    Is end of time?
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          className="ms-Stack css-65"
        >
          <div
            className="ms-StackItem css-64"
          >
            <div
              className="ms-TextField root-67"
            >
              <div
                className="ms-TextField-wrapper"
              >
                <div
                  className="ms-Stack css-171"
                >
                  <label
                    className="ms-Label root-142"
                  >
                    Timestamp
                  </label>
                  <button
                    className="ms-Button ms-Button--icon root-172"
                    data-is-focusable={true}
                    id="id__51"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    title="Info"
                    type="button"
                  >
                    <span
                      className="ms-Button-flexContainer flexContainer-114"
                      data-automationid="splitbuttonprimary"
                    >
                      <i
                        aria-hidden={true}
                        className="ms-Icon root-37 css-87 ms-Button-icon icon-116"
                        data-icon-name="Info"
                        role="presentation"
                        style={
                          Object {
                            "fontFamily": "\\"FabricMDL2Icons\\"",
                          }
                        }
                      >
                        
                      </i>
                    </span>
                  </button>
                </div>
                <div
                  className="ms-TextField-fieldGroup fieldGroup-68"
                >
                  <input
                    aria-invalid={false}
                    aria-labelledby="TextFieldLabel50"
                    className="ms-TextField-field field-140"
                    id="TextField48"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    readOnly={true}
                    style={
                      Object {
                        "border": "2px lightgray dashed",
                      }
                    }
                    type="text"
                    value="1606445760000"
                  />
                  <i
                    aria-hidden={true}
                    className="icon-145"
                    data-icon-name="Copy"
                  >
                    
                  </i>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ms-StackItem css-64"
          >
            <button
              className="ms-Button ms-Button--default root-173"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-114"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-87 ms-Button-icon icon-116"
                  data-icon-name="Trash"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
                <span
                  className="ms-Button-textContainer textContainer-115"
                >
                  <span
                    className="ms-Button-label label-117"
                    id="id__55"
                  >
                    Clear Local Storage
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          className="ms-StackItem css-64"
        >
          <span
            className="css-62"
          >
            2. Convert a timestamp to date in the time-zone selected above.
          </span>
        </div>
        <div
          className="ms-StackItem css-64"
        >
          <div
            className="ms-TextField root-67"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <div
                className="ms-Stack css-171"
              >
                <label
                  className="ms-Label root-142"
                >
                  Paste a timestamp
                </label>
                <button
                  className="ms-Button ms-Button--icon root-172"
                  data-is-focusable={true}
                  id="id__61"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseUp={[Function]}
                  title="Info"
                  type="button"
                >
                  <span
                    className="ms-Button-flexContainer flexContainer-114"
                    data-automationid="splitbuttonprimary"
                  >
                    <i
                      aria-hidden={true}
                      className="ms-Icon root-37 css-87 ms-Button-icon icon-116"
                      data-icon-name="Info"
                      role="presentation"
                      style={
                        Object {
                          "fontFamily": "\\"FabricMDL2Icons\\"",
                        }
                      }
                    >
                      
                    </i>
                  </span>
                </button>
              </div>
              <div
                className="ms-TextField-fieldGroup fieldGroup-68"
              >
                <input
                  aria-describedby="TextFieldDescription59"
                  aria-invalid={false}
                  className="ms-TextField-field field-69"
                  id="TextField58"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder="Try a timestamp..."
                  type="text"
                  value=""
                />
              </div>
            </div>
            <span
              id="TextFieldDescription59"
            >
              <span
                className="css-174"
              >
                Thu Jan 01 1970 05:30:00 GMT+0530 (Asia/Calcutta)
              </span>
              
            </span>
          </div>
        </div>
      </div>
      <div
        className="ms-Grid-col ms-lg2 ms-xl4"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Custom Label - Variant A Default 1`] = `
<div
  className="ms-Stack css-171"
>
  <label
    className="ms-Label root-142"
  >
    Timestamp
  </label>
  <button
    className="ms-Button ms-Button--icon root-172"
    data-is-focusable={true}
    id="id__69"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    title="Info"
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-114"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-87 ms-Button-icon icon-116"
        data-icon-name="Info"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons\\"",
          }
        }
      >
        
      </i>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Custom Label Default 1`] = `
<div
  className="ms-Stack css-171"
>
  <label
    className="ms-Label root-142"
  >
    Timestamp
  </label>
  <button
    className="ms-Button ms-Button--icon root-172"
    data-is-focusable={true}
    id="my-callout"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    title="Info"
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-114"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-87 ms-Button-icon icon-116"
        data-icon-name="Info"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons\\"",
          }
        }
      >
        
      </i>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Simple Form Default 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="ms-Stack css-126"
  >
    <div
      className="ms-TextField root-67"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-68"
        >
          <input
            aria-invalid={false}
            className="ms-TextField-field field-69"
            id="TextField73"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="Punch Card Name..."
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      className="ms-Button ms-Button--icon ms-hiddenMdUp root-176"
      data-is-focusable={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-114"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-87 ms-Button-icon icon-116"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
      </span>
    </button>
    <button
      className="ms-Button ms-Button--primary ms-hiddenSm root-113"
      data-is-focusable={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-114"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-87 ms-Button-icon icon-116"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
        <span
          className="ms-Button-textContainer textContainer-115"
        >
          <span
            className="ms-Button-label label-117"
            id="id__79"
          >
            Add Punch Card
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots POCs/Test Pivot Test 1`] = `
<div
  className="ms-Stack css-43"
>
  <div
    aria-label="Basic Pivot Example"
    className="ms-depth-8"
    role="toolbar"
  >
    <div
      className="ms-FocusZone css-51 ms-Pivot root-44"
      data-focuszone-id="FocusZone1"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDownCapture={[Function]}
      role="tablist"
    >
      <button
        aria-selected={true}
        className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link is-selected linkIsSelected-52"
        data-content="Convert 2 Timestamp"
        data-is-focusable={true}
        data-order={1}
        data-title="My Files Title"
        id="Pivot0-Tab0"
        name="Convert 2 Timestamp"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="tab"
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-53"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Pivot-linkContent linkContent-48"
          >
            <span
              className="ms-Pivot-text text-49"
            >
               
              Convert 2 Timestamp
            </span>
          </span>
        </span>
      </button>
      <button
        aria-selected={false}
        className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link link-60"
        data-content="Convert 2 Date"
        data-is-focusable={true}
        id="Pivot0-Tab1"
        name="Convert 2 Date"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="tab"
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-53"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Pivot-linkContent linkContent-48"
          >
            <span
              className="ms-Pivot-text text-49"
            >
               
              Convert 2 Date
            </span>
          </span>
        </span>
      </button>
    </div>
    <div
      aria-hidden={false}
      aria-labelledby="Pivot0-Tab0"
      className="itemContainer-45"
      hidden={false}
      role="tabpanel"
    >
      <div>
        <div
          className="ms-Stack css-43"
        >
          <span
            className="css-61"
          >
            Convert 2 Timestamp
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
